package LEBOCQTitouan.edu.view.ui.canvas.cellview.decoration;

import LEBOCQTitouan.edu.view.ui.canvas.DisplayableComponent;

import java.awt.*;

public class FogView implements DisplayableComponent {
    @Override
    public void display(Graphics g) {
        // TODO
    }
}
